--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.scss
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.scss
@@ -1,3 +1,10 @@
 .add-form {
     width: 700px !important;
 }
+.add-choice-btn{
+    color: #E95420;
+    background-color: bisque;
+    padding-left: 7px;
+    padding-right: 7px;
+    cursor: pointer;
+}
