--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-6">
-      <button type="button " [routerLink]="['/template/add']" class="btn btn-success mr-2">New Template</button>
+      <button type="button " [routerLink]="['/project/add']" class="btn btn-success mr-2">New Template</button>
       <button type="button" class="btn btn-danger">Delete</button>
     </div>
     <div class="col-6 text-right">
