--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
@@ -24,7 +24,7 @@
     <div class="form-group row" *ngFor="let item of question?.templateServiceOrderAnswer; let i = index">
       <label for="choice" class="col-sm-3 col-form-label">Choice {{i + 1}}</label>
       <div class="col-sm-9">
-        <input type="text" [(ngModel)]="item.choice" class="form-control" id="choice">
+        <input type="text" [(ngModel)]="item.choice" class="form-control">
       </div>
     </div>
     <div class="row">
