--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="row mb-2">
         <div class="col">
-          <button type="button " class="btn  btn-success mr-2" (click)="openDialog()">+ Add</button>
+          <button type="button " class="btn  btn-success mr-2" (click)="openDialog()">+ Add Question</button>
         </div>
       </div>
       <div class="row">
