--- a/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
+++ b/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
@@ -1,12 +1,42 @@
-<div class="container mt-5">
-  <div class="card">
-    <div class="card-header">
-      Featured
+<div class="add-form">
+  <div mat-dialog-content>
+    <div class="row">
+      <div class="col">
+        <h4>Add Project</h4>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="form-group row mt-2">
+      <label for="question" class="col-sm-3 col-form-label">Project Name</label>
+      <div class="col-sm-9">
+        <input [(ngModel)]="question.question" type="text" class="form-control" id="question">
+      </div>
+    </div>
+    <div class="form-group row mt-2">
+      <label for="question" class="col-sm-3 col-form-label">Use Template Name</label>
+      <div class="col-sm-9">
+        <select class="form-control" id="answerType">
+          <option selected>Choose...</option>
+          <option value="1">Template 1</option>
+          <option value="2">Template 1</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="answerType" class="col-sm-3 col-form-label">Status</label>
+      <div class="col-sm-9">
+        <select [(ngModel)]="question.answerType" class="form-control" id="answerType">
+          <option selected>Choose...</option>
+          <option value="1">In Process</option>
+          <option value="2">Hold</option>
+          <option value="3">Close</option>
+        </select>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col text-center">
+        <button type="button " class="btn  btn-success mr-2">Save</button>
+        <button type="button" class="btn  btn-danger" mat-dialog-close>Cancel</button>
+      </div>
     </div>
   </div>
 </div>
