add service order

--- a/PmProject-SPA/src/app/nav/nav.component.html
+++ b/PmProject-SPA/src/app/nav/nav.component.html
@@ -25,6 +25,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/project']">Project</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/serviceOrder']">Service Order</a>
+      </li>
     </ul>
 
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
