--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -54,7 +54,8 @@
 
                 <ng-container matColumnDef="export">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Export </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name"> <a href="">Export</a> </td>
+                  <td mat-cell *matCellDef="let element" data-label="Template Name">
+                    <a (click)="export(element.id)">Export</a> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
