--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
@@ -34,7 +34,7 @@
     </div>
     <div class="row mt-4">
       <div class="col text-center">
-        <button type="button " class="btn  btn-success mr-2">Save</button>
+        <button type="button " class="btn  btn-success mr-2">Add</button>
         <button type="button" class="btn  btn-danger" mat-dialog-close>Cancel</button>
       </div>
     </div>
