--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
@@ -9,7 +9,8 @@
           <div class="form-group row">
             <label for="templateName" class="col-sm-3 col-form-label text-right">Template Name</label>
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="Template Name" id="templateName">
+              <input type="text" [(ngModel)]="templateServiceOrder.name" class="form-control"
+                placeholder="Template Name" id="templateName">
             </div>
             <div class="col-sm-4">
               <button type="button " class="btn  btn-success mr-2">Save</button>
@@ -29,7 +30,7 @@
                   <!-- Position Column -->
                   <ng-container matColumnDef="question">
                     <th mat-header-cell *matHeaderCellDef> Question </th>
-                    <td mat-cell *matCellDef="let element"> {{element.question}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="action">
