update service oder

--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
@@ -13,7 +13,7 @@
                 placeholder="Template Name" id="templateName">
             </div>
             <div class="col-sm-4">
-              <button type="button " class="btn  btn-success mr-2">Save</button>
+              <button type="button " class="btn  btn-success mr-2" (click)="save()">Save</button>
               <button type="button" class="btn  btn-danger" [routerLink]="['/template']">Cancel</button>
             </div>
           </div>
