--- a/PmProject-SPA/src/app/app.component.html
+++ b/PmProject-SPA/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-nav></app-nav>
 <router-outlet></router-outlet>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="timer" [fullScreen]="true">
+    <p style="color: white"> Loading... </p>
+</ngx-spinner>
