Template Service Order DONE.

--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
@@ -38,7 +38,8 @@
                     <td class="text-right" mat-cell *matCellDef="let element ">
                       <button type="button " (click)="openDialogEdite(element.id)"
                         class="btn btn-sm btn-success mr-2">Edit</button>
-                      <button type="button" class="btn btn-sm btn-danger">Delete</button> </td>
+                      <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
+                    </td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
