--- a/PmProject-SPA/src/app/service-order/service-order-add-edit/service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order-add-edit/service-order-add-edit.component.html
@@ -20,7 +20,7 @@
         <div class="row mb-3">
           <div class="col-2">
           </div>
-          <div class="col-10">
+          <div class="col-12 col-md-12">
             <div class="card">
               <div class="card-header">
                 Qustion
@@ -98,7 +98,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-2 text-right">
+          <div class="col-sm-2  clo-12 text-right">
             <button class="btn btn-danger" (click)="clear()">Clear</button>
           </div>
         </div>
