Project Done. whitout export

--- a/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
+++ b/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
@@ -2,19 +2,20 @@
   <div mat-dialog-content>
     <div class="row">
       <div class="col">
-        <h4>Add Project</h4>
+        <h4>{{mode}} Project</h4>
       </div>
     </div>
     <div class="form-group row mt-2">
       <label for="projectName" class="col-sm-3 col-form-label">Project Name</label>
       <div class="col-sm-9">
-        <input type="text" [(ngModel)]="project.name" class="form-control" id="projectName">
+        <input type="text" (ngModelChange)="change()" [(ngModel)]="project.name" class="form-control" id="projectName">
       </div>
     </div>
     <div class="form-group row mt-2">
       <label for="templateName" class="col-sm-3 col-form-label">Use Template Name</label>
       <div class="col-sm-9">
-        <select [(ngModel)]="project.templateServiceOrderId" class="form-control" id="templateName">
+        <select (ngModelChange)="change()" [(ngModel)]="project.templateServiceOrderId" class="form-control"
+          id="templateName">
           <option value="0" selected>Choose...</option>
 
           <option *ngFor="let item of template" [value]="item.id">{{item.name}}</option>
@@ -24,7 +25,7 @@
     <div class="form-group row">
       <label for="status" class="col-sm-3 col-form-label">Status</label>
       <div class="col-sm-9">
-        <select [(ngModel)]="project.status" class="form-control" id="status">
+        <select (ngModelChange)="change()" [(ngModel)]="project.status" class="form-control" id="status">
           <option value="0" selected>Choose...</option>
           <option value="1">In Process</option>
           <option value="2">Hold</option>
@@ -34,7 +35,8 @@
     </div>
     <div class="row mt-4">
       <div class="col text-center">
-        <button type="button " (click)="save()" class="btn  btn-success mr-2">Save</button>
+        <button type="button " [attr.disabled]="btnSave == true ? true : null" (click)="save()"
+          class="btn  btn-success mr-2">Save</button>
         <button type="button" class="btn  btn-danger" mat-dialog-close>Cancel</button>
       </div>
     </div>
