--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-6">
             <button type="button " (click)="openDialog()" class="btn btn-success mr-2">New Project</button>
-            <button type="button" class="btn btn-danger">Delete</button>
+            <button type="button" (click)="deleteSelected()" class="btn btn-danger">Delete</button>
           </div>
           <div class="col-6 text-right">
             <mat-form-field>
@@ -43,13 +43,14 @@
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                  <th style="width: 35%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
                   <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="templateServiceOrder">
-                  <th style="width: 35%;" mat-header-cell *matHeaderCellDef mat-sort-header>Use Template Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.templateName}} </td>
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Use Template Name </th>
+                  <td mat-cell *matCellDef="let element" data-label="Template Name">
+                    {{element.templateServiceOrder.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="export">
@@ -62,7 +63,8 @@
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
                     <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button> </td>
+                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
+                  </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
