--- a/PmProject-SPA/src/app/service-order/service-order.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order.component.html
@@ -13,8 +13,8 @@
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <button type="button " [routerLink]="['/serviceOrder/add']" class="btn btn-success mr-2">New Service Order
-            </button>
+            <!-- <button type="button " [routerLink]="['/serviceOrder/add']" class="btn btn-success mr-2">New Service Order
+            </button> -->
             <button type="button" class="btn btn-danger">Delete</button>
           </div>
           <div class="col-6 text-right">
