--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
@@ -16,8 +16,9 @@
       <div class="col-sm-9">
         <select [(ngModel)]="question.answerTypeId" class="form-control" id="answerType">
           <option selected>Choose...</option>
-          <option value="1">One Chaoice</option>
-          <option value="2">Many</option>
+          <option value="1">Text</option>
+          <option value="2">One Chaoice</option>
+          <option value="3">Many</option>
         </select>
       </div>
     </div>
