--- a/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
+++ b/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
@@ -26,7 +26,8 @@
       <label for="status" class="col-sm-3 col-form-label">Status</label>
       <div class="col-sm-9">
         <select (ngModelChange)="change()" [(ngModel)]="project.status" class="form-control" id="status">
-          <option value="0" selected>Choose...</option>
+          <option selected>Choose...</option>
+          <option value="0">Open</option>
           <option value="1">In Process</option>
           <option value="2">Hold</option>
           <option value="3">Close</option>
