--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
@@ -17,8 +17,8 @@
         <select [(ngModel)]="question.answerTypeId" class="form-control" id="answerType">
           <option selected>Choose...</option>
           <option value="1">Text</option>
-          <option value="2">One Chaoice</option>
-          <option value="3">Many</option>
+          <option value="2">One Choice</option>
+          <option value="3">Many Choice</option>
         </select>
       </div>
     </div>
