--- a/PmProject-SPA/src/app/service-order/service-order-add-edit/service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order-add-edit/service-order-add-edit.component.html
@@ -64,7 +64,7 @@
                       <div class="form-group col-md-12">
                         <div *ngFor="let answer of question.templateServiceOrderAnswer">
                           <mat-checkbox (change)="setAnswerMany(question.id, answer.id, $event.checked)"
-                            [ngModel]="answerMany(question.id)" class="example-margin mr-2">
+                            [ngModel]="answerMany(question.id, answer.id)" class="example-margin mr-2">
                             {{answer.answer}}
                           </mat-checkbox>
                         </div>
@@ -80,18 +80,34 @@
           <label for="inputEmail3" class="col-sm-2 col-form-label">Upload Image</label>
           <div class="col-sm-10">
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile02">
+              <input type="file" class="custom-file-input" (change)="handleFileInput($event.target.files)" multiple
+                accept="image/png, image/jpeg" id="inputGroupFile02">
               <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Choose
                 file</label>
             </div>
           </div>
         </div>
+        <ng-container *ngFor="let image of serviceOrder.serviceOrderImage">
+          <div class="row form-group mb-2">
+            <div class="col-1 vertical-center text-right">
+              <span class="mr-2"><i class="fas fa-camera-retro"></i></span>
+            </div>
+            <div class="col-8 col-md-10 vertical-center overflow">
+              {{image.imagePath}}
+            </div>
+            <div class="col-1  text-right ">
+              <button type="button" (click)="deleteImg(image.imagePath)" class="btn btn-danger btn-sm"><i
+                  style="font-size: 8px;" class="fas fa-trash-alt"></i></button>
+            </div>
+          </div>
+        </ng-container>
+        <hr>
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Customer Signature</label>
           <div class="col-sm-8 text-center">
             <div class="signature-pad">
               <div class="signature-pad--body">
-                <canvas #sPad width="auto" height="200"
+                <canvas #sPad width="250rem;" height="200"
                   style="touch-action: none; background-color: honeydew;"></canvas>
               </div>
             </div>
