--- a/PmProject-SPA/src/app/project/export/export.component.html
+++ b/PmProject-SPA/src/app/project/export/export.component.html
@@ -30,15 +30,15 @@
               </div>
             </div>
             <h4>Preview</h4>
-            <div class="row">
+            <div class="row" id="contentToConvert">
               <div class="col">
                 <div class="jumbotron jumbotron-fluid">
                   <div class="container">
                     <div class="row mb-3" *ngIf="isDataAvailable">
                       <div class="col-sm-12 col-md-6 text-center  mb-3"
                         *ngFor="let item of serviceOrder.serviceOrderImage">
-                        <img src="{{baseUrl + item.imagePath}}" style="width:400px;  height:300px;" class="img-fluid"
-                          alt="Responsive image">
+                        <img id="{{item.id}}" src="{{baseUrl + item.imagePath}}" style="width:400px;  height:300px;"
+                          class="img-fluid" alt="Responsive image">
                       </div>
                       <!-- <div class="col">
                         <img src="http://localhost:5000/api/ServiceOrder/Download/0011_1.png"
@@ -65,7 +65,7 @@
             <div class="row">
               <div class="col text-center">
                 <!-- <button type="button" class="btn btn-success mr-2">Save</button> -->
-                <button type="button" (click)="export()" class="btn btn-primary mr-2">Export</button>
+                <button type="button" (click)="download()" class="btn btn-primary mr-2">Export</button>
                 <button type="button" class="btn btn-danger" [routerLink]="['/project']">Cancel</button>
               </div>
             </div>
