--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -44,24 +44,24 @@
 
                 <ng-container matColumnDef="name">
                   <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.name}} </td>
+                  <td mat-cell *matCellDef="let element" data-label="Project Name"> {{element.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="templateServiceOrder">
                   <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Use Template Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name">
+                  <td mat-cell *matCellDef="let element" data-label="Use Template Name">
                     {{element.templateServiceOrder.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="export">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Export </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name">
+                  <td mat-cell *matCellDef="let element" data-label="Export">
                     <a (click)="export(element.id)">Export</a> </td>
                 </ng-container>
                 <ng-container matColumnDef="serviceOrder">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Service Order </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name">
-                    <a (click)="serviceOrder(element.id)">Service Order</a> </td>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Service </th>
+                  <td mat-cell *matCellDef="let element" data-label="Service">
+                    <a (click)="serviceOrder(element.id)">Service</a> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
