--- a/PmProject-SPA/src/app/service-order/service-order.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order.component.html
@@ -45,17 +45,17 @@
 
                 <ng-container matColumnDef="serviceOrderNo">
                   <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Service Order No. </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.serviceOrderNo}} </td>
+                  <td mat-cell *matCellDef="let element" data-label="ervice Order No."> {{element.serviceOrderNo}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="description">
                   <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Description </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.description}} </td>
+                  <td mat-cell *matCellDef="let element" data-label="Description"> {{element.description}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="status">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
-                  <td mat-cell *matCellDef="let element" data-label="Template Name">
+                  <td mat-cell *matCellDef="let element" data-label="Status">
                     <p *ngIf="element.status === 0">Open</p>
                     <p *ngIf="element.status === 1">In Process</p>
                     <p *ngIf="element.status === 2">Hold</p>
